fix #1437; change tooltip z-index; adjust reposnosve table;

--- a/modules/admin/src/resources/scss/components/_table.scss
+++ b/modules/admin/src/resources/scss/components/_table.scss
@@ -77,3 +77,20 @@
     cursor: pointer;
     user-select: none;
 }
+
+// Copied from bootstrap to show table-responsive earlier
+
+.table-responsive {
+
+    @media (max-width:$reponsive-table-breakpoint) {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        //-ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
+
+        // Prevent double border on horizontal scroll due to use of `display: block;`
+        &.table-bordered {
+            border: 0;
+        }
+    }
+}
